# Genius-TCAD-Open

./: COPYRIGHT  INSTALL  INSTALL-WIN32  README  aclocal.m4  configure.in  make.defs.in  makefile  objects  waf  wscript
doc/: Doxyfile
docker/: DockerUsage.md  Dockerfile  bash.sh  build.sh
examples/BJT/: step1.inp  step2.inp  step3.inp  step4.inp  step5.inp
examples/CAP/: cap.cc  cap.inp
examples/EEPROM/: erase.inp  model.inp  read.inp  write.inp
examples/HALL/: hall.inp  hall_S_Tet4.inp
examples/HBJT/: model.inp  step2.inp  step3.inp
examples/HEMT/: step1.inp  step2.inp
examples/IDC_Run/: gdmlgen.py  gdmlgen_dlg.py  run.py  run_dlg.py
examples/Inject/: README  electron_beam.c  pin_inject_2d.inp
examples/MESFET/: IV.inp  init.inp
examples/MOSCAP/: cap.inp  caps.inp
examples/Material/: PMI.cc  PMI_benchmark_mob.cc  PMI_benchmark_mob.h  PMI_benchmark_optical.cc  PMI_benchmark_optical.h  adolc_init.cc  config.h  configure.sh  makefile  parser_parameter.cc  test_mob.cc  update.sh
examples/SOI/: soi.inp  soi_tid.inp
examples/Schottky_Diode/: diode_ckt.cir  mix.inp  sdiode.inp  sdiode_ac.inp
examples/TID/: tid.inp
examples/Thyristor/: circuit.inp  model.inp
examples/Trap/: diode_dc.inp  nmos_iv.inp  nmos_mesh.inp  nmos_tr.inp
include/base/: auto_ptr.h  dof_object.h  genius_common.h  genius_common.h.orig  genius_dll.h  genius_env.h  genius_petsc.h  log.h  memory_log.h  multi_predicates.h  o_string_stream.h  perf_log.h  single_predicates.h  variant_filter_iterator.h
include/bc/: boundary_condition.h  boundary_condition_abs.h  boundary_condition_charge.h  boundary_condition_charge_emit.h  boundary_condition_charge_integral.h  boundary_condition_collector.h  boundary_condition_ee.h  boundary_condition_ei.h  boundary_condition_electrode_interconnect.h  boundary_condition_ev.h  boundary_condition_gate.h  boundary_condition_hetero.h  boundary_condition_homo.h  boundary_condition_ii.h  boundary_condition_ir.h  boundary_condition_is.h  boundary_condition_iv.h  boundary_condition_neumann.h  boundary_condition_ohmic.h  boundary_condition_poly_gate.h  boundary_condition_resistance_ohmic.h  boundary_condition_resistance_schottky.h  boundary_condition_rr.h  boundary_condition_schottky.h  boundary_condition_simplegate.h  boundary_condition_solderpad.h
include/enums/: enum_advanced_model.h  enum_bc.h  enum_data_type.h  enum_direction.h  enum_elem_quality.h  enum_elem_type.h  enum_fe_family.h  enum_io_package.h  enum_order.h  enum_petsc_type.h  enum_point_locator_type.h  enum_quadrature_type.h  enum_region.h  enum_solution.h  enum_solver_specify.h  enum_surface_locator_type.h  enum_voronoi_truncation.h
include/fe/: fe.h  fe_base.h  fe_interface.h  fe_macro.h  fe_type.h
include/geom/: edge.h  edge_edge2.h  edge_edge2_fvm.h  elem.h  elem_clone.h  elem_intersection.h  elem_ukey.h  face.h  face_cy_quad4_fvm.h  face_cy_tri3_fvm.h  face_quad.h  face_quad4.h  face_quad4_fvm.h  face_tri.h  face_tri3.h  face_tri3_fvm.h  node.h  node_elem.h  plane.h  point.h  polygon.h  polygon_usample.h  side.h  sphere.h  surface.h
include/hook/: cgns_hook.h  charge_deposit_hook.h  current_conservation_hook.h  cv_hook.h  data_hook.h  ddm_monitor_hook.h  dlhook.h  dxhook.h  eigenvalue_hook.h  fg_qf_hook.h  gnuplot_hook.h  gummel_monitor_hook.h  hook.h  hook_list.h  injection_hook.h  interface_current_hook.h  ksp_convergence_hook.h  lsmonitor_hook.h  mob_monitor_hook.h  monitor_hook.h  particle_capture_1d_hook.h  particle_capture_analytic_hook.h  particle_capture_data_hook.h  particle_capture_g4_hook.h  particle_monitor_hook.h  probe_hook.h  rawfile_hook.h  shell_hook.h  singularvalue_hook.h  spice_monitor_hook.h  surface_recombination_hook.h  threshold_hook.h  tunneling_hook.h  visit_hook.h  vtk_hook.h
include/interpolation/: interpolation_1d.h  interpolation_1d_linear.h  interpolation_1d_spline.h  interpolation_2d_csa.h  interpolation_2d_nn.h  interpolation_3d_nbtet.h  interpolation_3d_qshep.h  interpolation_base.h
include/material/: PMI.h  atom.h  material.h  material_define.h  physical_unit.h
include/math/: adolc.h  adsmt.h  asinh.hpp  csr_matrix.h  dense_matrix.h  dense_matrix_base.h  dense_vector.h  dense_vector_base.h  expr_evaluate.h  hdm_flux.h  jflux1.h  jflux1q.h  jflux2.h  jflux3.h  mathfunc.h  numeric_vector.h  petsc_macro.h  petsc_matrix.h  petsc_type.h  petsc_utils.h  petsc_vector.h  sparse_matrix.h  symbolic_matrix.h  tensor_value.h  type_tensor.h  type_vector.h  vector_value.h
include/mesh/: boundary_info.h  boundary_mesh.h  mesh.h  mesh_base.h  mesh_communication.h  mesh_modification.h  mesh_refinement.h  mesh_tools.h  serial_mesh.h  unstructured_mesh.h
include/meshgen/: mesh_generation.h  mesh_generation_base.h  mesh_generation_cy.h  mesh_generation_cy2d.h  mesh_generation_cy3d.h  mesh_generation_quad4.h  mesh_generation_struct.h  mesh_generation_tri3.h  mesh_generation_tri3.h.orig  skeleton.h
include/parser/: file_include.h  key.h  parser.h  parser_card.h  parser_parameter.h  pattern.h
include/partition/: metis_partitioner.h  parmetis_partitioner.h  partitioner.h
include/quadrature/: quadrature.h  quadrature_conical.h  quadrature_gauss.h  quadrature_gm.h  quadrature_jacobi.h
include/solution/: advanced_model.h  boundary_condition.h  boundary_condition_collector.h  cgns_io.h  conductor_region.h  control.h  data_object.h  data_storage.h  dfise_io.h  external_circuit.h  external_circuit_pi.h  external_circuit_rcl.h  external_circuit_rct.h  field_input.h  field_output.h  fvm_cell_data.h  fvm_cell_data_conductor.h  fvm_cell_data_insulator.h  fvm_cell_data_pml.h  fvm_cell_data_resistance.h  fvm_cell_data_semiconductor.h  fvm_cell_data_vacuum.h  fvm_node_data.h  fvm_node_data_conductor.h  fvm_node_data_insulator.h  fvm_node_data_pml.h  fvm_node_data_resistance.h  fvm_node_data_semiconductor.h  fvm_node_data_vacuum.h  fvm_node_info.h  gdml_io.h  gmsh_io.h  insulator_region.h  location_io.h  pml_region.h  resistance_region.h  (+12 more)
lib/: GeniusSyntax.xml  material.def  solar_spectrum_outspace
python/: configure.py  makefile
src/: main.cc  makefile  wscript
(+986 files in other folders)
